[gd_scene load_steps=12 format=3 uid="uid://dbwqlrj1mjmnq"]

[ext_resource type="Script" uid="uid://d3560f7rbebtk" path="res://scenes/startMenu/start_menu.gd" id="1_o5tev"]
[ext_resource type="Texture2D" uid="uid://cfxnqxr4fbh2r" path="res://assets/assetsMenus/background.png" id="1_pqktd"]
[ext_resource type="Texture2D" uid="uid://cxq5dgl5mrjln" path="res://assets/assetsMenus/botonNormal.png" id="2_a3q36"]
[ext_resource type="AudioStream" uid="uid://dtmnfwqpnhf6g" path="res://assets/assetsSounds/001_Hover_01.wav" id="2_wl3je"]
[ext_resource type="AudioStream" uid="uid://driyh30wxlfev" path="res://assets/assetsSounds/selectionSong.ogg" id="3_k3d7q"]
[ext_resource type="Texture2D" uid="uid://2dij5nou22oo" path="res://assets/assetsMenus/botonHover.png" id="3_l4vvl"]
[ext_resource type="FontFile" uid="uid://0vb0ag4ks2bj" path="res://assets/fonts/fibberish.ttf" id="4_ofaed"]
[ext_resource type="AudioStream" uid="uid://dou44adm3t5u" path="res://assets/assetsSounds/startingSong.mp3" id="6_a3q36"]

[sub_resource type="LabelSettings" id="LabelSettings_o5tev"]
font = ExtResource("4_ofaed")
font_size = 100
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a3q36"]
font = ExtResource("4_ofaed")
font_size = 100
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l4vvl"]
font = ExtResource("4_ofaed")
font_size = 100
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="StartMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -33.0
offset_right = 812.0
offset_bottom = 519.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 20
script = ExtResource("1_o5tev")
sfx_hover = ExtResource("2_wl3je")
sfx_click = ExtResource("3_k3d7q")

[node name="FxLayer" type="CanvasLayer" parent="."]

[node name="Flash" type="ColorRect" parent="FxLayer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1700, 0)
layout_mode = 2
texture = ExtResource("1_pqktd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 20
alignment = 1

[node name="Start" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 90)
layout_mode = 2
texture_normal = ExtResource("2_a3q36")
texture_hover = ExtResource("3_l4vvl")
stretch_mode = 0

[node name="startLabel" type="Label" parent="VBoxContainer/Start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.3334
offset_top = -44.166695
offset_right = 154.6666
offset_bottom = 43.833313
grow_horizontal = 2
grow_vertical = 2
text = "Empezar"
label_settings = SubResource("LabelSettings_o5tev")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 90)
layout_mode = 2
texture_normal = ExtResource("2_a3q36")
texture_hover = ExtResource("3_l4vvl")

[node name="creditsLabel" type="Label" parent="VBoxContainer/Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.3334
offset_top = -40.166725
offset_right = 160.6666
offset_bottom = 47.833282
grow_horizontal = 2
grow_vertical = 2
text = "Creditos"
label_settings = SubResource("LabelSettings_a3q36")

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 90)
layout_mode = 2
texture_normal = ExtResource("2_a3q36")
texture_hover = ExtResource("3_l4vvl")

[node name="exitLabel" type="Label" parent="VBoxContainer/Exit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.00006
offset_top = -37.833374
offset_right = 95.99994
offset_bottom = 50.166626
grow_horizontal = 2
grow_vertical = 2
text = "Salir"
label_settings = SubResource("LabelSettings_l4vvl")

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 8

[node name="SongPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_a3q36")
autoplay = true

[node name="UiPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="mouse_entered" from="VBoxContainer/Start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Credits" to="." method="_on_credits_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Exit" to="." method="_on_exit_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
